# ARENA

./: Dockerfile  LICENSE  README.md  requirements.txt
.github/workflows/: docker-arena-cuda-ros-image.yml
arena_core/: CMakeLists.txt  package.xml
arena_core/demos/: CMakeLists.txt
arena_core/demos/config/: costmap_3D_params.yaml  husky_problem_params.yaml  linedrone_problem_params.yaml
arena_core/demos/config/husky/: grid_map_filters_config.yaml  husky_problem_params.yaml
arena_core/demos/include/husky/: husky_nurbs_analyzer.h  husky_problem.hpp
arena_core/demos/include/husky/mapping/: traversability_costmap.hpp  traversability_map.hpp
arena_core/demos/include/linedrone/: costmap_3D.h  costmap_mapping.h  linedrone_nurbs_analyzer.h  linedrone_problem.hpp  nadile_nurbs_analyzer.h  nurbs_analyzer_old.h  old_nurbs.h
arena_core/demos/include/xmax/: bicycle_model.h  dynamic_model.h  mpc_controller.h
arena_core/demos/launch/: costmap_3D_launch.py  husky_test_node_launch.py  linedrone_test_node_launch.py
arena_core/demos/launch/husky/: elevation_map_node_launch.py  husky_test_node_launch.py  traversability_map_node_launch.py
arena_core/demos/nodes/: CMakeLists.txt  costmap_3D_node.cpp  linedrone_test_node.cpp  mpc_controller_node.cpp  nurbs_test_node.cpp  pagmo_test.cpp
arena_core/demos/nodes/husky/: elevation_map_node.cpp  husky_test_node.cpp  traversability_map_node.cpp
arena_core/demos/nodes/linedrone/: costmap_3D_node.cpp  linedrone_test_node.cpp
arena_core/demos/ressources/saved_octomaps/: CL_map_res_50cm.bt  map_test_3.bt
arena_core/demos/rviz2/husky_configs/: husky_demo_rviz2.rviz
arena_core/demos/src/husky/: husky_nurbs_analyzer.cpp  husky_problem.cpp
arena_core/demos/src/husky/mapping/: traversability_map.cpp
arena_core/demos/src/linedrone/: costmap_3D.cpp  costmap_mapping.cpp  linedrone_nurbs_analyzer.cpp  linedrone_problem.cpp  nadile_nurbs_analyzer.cpp  nurbs_analyzer_old.cpp  old_nurbs.cpp
arena_core/demos/tests/: CMakeLists.txt  pagmo_test.cpp
arena_core/launch/: costmap_3D_launch.py
arena_core/libs/: CMakeLists.txt  README.md
arena_core/libs/arena_core/: CMakeLists.txt
arena_core/libs/arena_core/include/arena_core/: IRobot.h  state.h
arena_core/libs/arena_core/include/arena_core/geometry/: octomap_state_validity_checker.h  ompl_state_validity_checker.h  optimization_objective_custom.h  oriented_bounding_box_wrapper.h
arena_core/libs/arena_core/include/arena_core/mapping/: IMapping.h  costmap_3D.h
arena_core/libs/arena_core/include/arena_core/math/: control_point.h  nurbs.h
arena_core/libs/arena_core/include/arena_core/math/algorithm/: adaptive_voting_algorithm.h
arena_core/libs/arena_core/include/arena_core/math/impl/utils/: linalg.inl
arena_core/libs/arena_core/include/arena_core/math/optimization/evaluation/: INurbsAnalyzer.h
arena_core/libs/arena_core/include/arena_core/math/optimization/problems/pagmo_problems/: nadile_problem.hpp
arena_core/libs/arena_core/include/arena_core/math/utils/: linalg.h  pcl_utils.h
arena_core/libs/arena_core/include/arena_core/planning/: OMPLPlanner.h
arena_core/libs/arena_core/include/arena_core/spaces/: control_point.h
arena_core/libs/arena_core/src/geometry/: octomap_state_validity_checker.cpp  ompl_state_validity_checker.cpp  optimization_objective_custom.cpp
arena_core/libs/arena_core/src/mapping/: costmap_3D.cpp
arena_core/libs/arena_core/src/math/: nurbs.cpp
arena_core/libs/arena_core/src/math/algorithm/: adaptive_voting_algorithm.cpp
arena_core/libs/arena_core/src/math/optimization/problems/pagmo_problems/: nadile_problem.cpp
arena_core/libs/arena_core/src/planning/: OMPLPlanner.cpp
arena_core/libs/arena_core/tests/: CMakeLists.txt  tests_nurbs.cpp
arena_core/nodes/: CMakeLists.txt  costmap_3D_node.cpp  nurbs_test_node.cpp  pagmo_test.cpp
arena_msgs/: CMakeLists.txt  package.xml
doc/diagrams/: ARENA_API.drawio
doc/web/: index.html
scripts/: build_docker_unix.sh  build_docker_win.bat  run_docker_unix.sh  run_docker_win.bat
scripts/ros2_scripts/: send_CL_map_planning_info.sh
