<package format="3">
  <name>arena_core</name>
  <version>0.1.0</version>
  <description>Set of messages used by the arena algorithm</description>
  <author email="david-alexandre.poissant@usherbrooke.ca">David-Alexandre Poissant</author>

  <maintainer email="david-alexandre.poissant@usherbrooke.ca">David-Alexandre Poissant</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>