<package format="3">
  <name>arena_msgs</name>
  <version>0.1.0</version>
  <description>Set of messages used by the arena algorithm</description>
  <author email="david-alexandre.poissant@usherbrooke.ca">David-Alexandre Poissant</author>

  <maintainer email="david-alexandre.poissant@usherbrooke.ca">David-Alexandre Poissant</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>message_generation</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>